[tool.poetry]
name = "ai-lista1"
version = "0.1.0"
description = ""
authors = ["Razuer <97433470+Razuer@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Dijkstar = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
notebook = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
